--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,15 @@ keywords = ["PostgreSQL", "PostGIS", "GIS", "GEO"]
 license = "MIT"
 edition = "2018"
 
+[features]
+serde = ["dep:serde"]
+
 [dependencies]
 postgres-types = "0.2"
 byteorder = "1.4"
 bytes = "1.0"
+serde = { version = "1.0", optional = true, features = ["derive"] }
 
 [dev-dependencies]
 postgres = "0.19"
+serde_json = "1.0"
