--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "postgis"
-version = "0.9.0"
+version = "0.10.0"
 authors = ["ShuYu Wang <andelf@gmail.com>", "Pirmin Kalberer <pka@sourcepole.ch>"]
 description = "An extension to rust-postgres, adds support for PostGIS."
 homepage = "https://github.com/andelf/rust-postgis"
@@ -19,6 +19,7 @@ postgres-types = "0.2"
 byteorder = "1.4"
 bytes = "1.0"
 serde = { version = "1.0", optional = true, features = ["derive"] }
+geo-types = "0.7.16"
 
 [dev-dependencies]
 postgres = "0.19"
