--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ license = "MIT"
 edition = "2018"
 
 [features]
-serde = ["dep:serde"]
+serde = ["dep:serde", "geo-types/serde"]
 
 [dependencies]
 postgres-types = "0.2"
