--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "postgis"
-version = "0.11.0"
-authors = ["ShuYu Wang <andelf@gmail.com>", "Pirmin Kalberer <pka@sourcepole.ch>"]
+name = "postgis-butmaintained"
+version = "0.12.0"
+authors = ["Evan Carroll <me@evancarroll.com>"]
 description = "An extension to rust-postgres, adds support for PostGIS."
-homepage = "https://github.com/andelf/rust-postgis"
-repository = "https://github.com/andelf/rust-postgis"
+homepage = "https://github.com/EvanCarroll/rust-postgis-butmaintained"
+repository = "https://github.com/EvanCarroll/rust-postgis-butmaintained"
 readme = "README.md"
-documentation = "https://docs.rs/postgis/"
+documentation = "https://docs.rs/postgis-butmaintained/"
 keywords = ["PostgreSQL", "PostGIS", "GIS", "GEO"]
 license = "MIT"
 edition = "2024"
